tdf#112500 Store world transform during graphic save

Change-Id: Iefa51dcca6d6b896fbd41cefc0a115c501c45675
Reviewed-on: https://gerrit.libreoffice.org/44923
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Patrick Jaap <patrick.jaap@tu-dresden.de>
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>